Bug 70554 - [Chromium] Fix opaque flag default and for ImageLayerChromium
Summary: [Chromium] Fix opaque flag default and for ImageLayerChromium
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-20 15:36 PDT by Dana Jansens
Modified: 2011-10-20 19:23 PDT (History)
5 users (show)

See Also:


Attachments
Patch (2.33 KB, patch)
2011-10-20 15:38 PDT, Dana Jansens
no flags Details | Formatted Diff | Diff
Fixed changelog (2.33 KB, patch)
2011-10-20 16:46 PDT, Dana Jansens
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Dana Jansens 2011-10-20 15:36:39 PDT
[Chromium] Fix opaque flag default and for ImageLayerChromium
Comment 1 Dana Jansens 2011-10-20 15:38:28 PDT
Created attachment 111858 [details]
Patch
Comment 2 Dana Jansens 2011-10-20 15:39:58 PDT
I thought I'd fix the opaque flag in a separate CL, especially since the ImageLayerChromium seems like it can be fixed along with it.  Is this right?
Comment 3 Antoine Labour 2011-10-20 15:41:57 PDT
This LGTM
Comment 4 James Robinson 2011-10-20 16:03:25 PDT
Comment on attachment 111858 [details]
Patch

R=me

Can you construct some layout tests with opaque and non-opaque images that get composited (or verify that we have such tests already) as part of the patch that disables blending for opaque layers? I want to make sure we have testing there.
Comment 5 Dana Jansens 2011-10-20 16:46:51 PDT
Created attachment 111872 [details]
Fixed changelog
Comment 6 WebKit Review Bot 2011-10-20 19:23:13 PDT
Comment on attachment 111872 [details]
Fixed changelog

Clearing flags on attachment: 111872

Committed r98055: <http://trac.webkit.org/changeset/98055>
Comment 7 WebKit Review Bot 2011-10-20 19:23:17 PDT
All reviewed patches have been landed.  Closing bug.