[Chromium] Fix opaque flag default and for ImageLayerChromium https://bugs.webkit.org/show_bug.cgi?id=70554

Patch by Dana Jansens <danakj@chromium.org> on 2011-10-20
Reviewed by James Robinson.

Covered by layout tests.

* platform/graphics/chromium/ImageLayerChromium.cpp:
(WebCore::ImageLayerChromium::setContents): Set opaque flag based on if the image claims to have alpha.
* platform/graphics/chromium/LayerChromium.cpp:
(WebCore::LayerChromium::LayerChromium): Match the default opaque value in GraphicsLayerChromium.

Canonical link: https://commits.webkit.org/86763@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98055 268f45cc-cd09-0410-ab3c-d52691b4dbfc